# word_vines

./: .gitignore  config.yaml  main.py  preprocessing.py  pyproject.toml
utils/: ConfigManager.py
